Changelog for Swagger2

0.03
       * Add validate()

0.02     Fri Dec  5 10:01:34 2014
       * Add Swagger2::SchemaValidator
       * Add Mojolicious::Plugin::Swagger2
       * Add expand()

0.01     Thu Dec  4 14:01:27 2014
       * Add load()
       * Add pod() and Swagger2::POD
       * Add to_string($format)
       * Started project
